--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,11 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
 
   <body>
-    <side-bar></side-bar>
+    <head-custom></head-custom>
+    <div class="container-fluid">
+      <div class="row">
+        <side-bar></side-bar>
+      </div>
+    </div>
   </body>
 </html>
