--- a/Index.html
+++ b/Index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <link rel="stylesheet" href="Css/style.css" />
     <link rel="stylesheet" href="./Boostrap/css/bootstrap.css">
     <script defer="" src="./Boostrap/js/bootstrap.bundle.js"></script>
     <script type="module" src="App.js" defer></script>
-    <link rel="stylesheet" href="Css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
 
-  <body>
+  <body class="d-flex">
     <side-bar></side-bar>
+    <div>
+        <h1 class="my-4 mx-5"><strong>Sistema de Gestion de Activos</strong></h1>
+        <agregar-activo></agregar-activo>
+    </div>
   </body>
 </html>
