feat: :sparkles: editarArchivo filled
Se agrega la funcionalidad editar archivo, todos los valores son rellenados respectivamente

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <script defer="" src="./Boostrap/js/bootstrap.bundle.js"></script>
     <script type="module" src="App.js" defer></script>
     <link rel="stylesheet" href="Css/style.css" />
-
+    <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
   <body class="d-flex">
     <side-bar></side-bar>
     <div>
