--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <div>
         <h1 class="my-4 mx-5"><strong>Sistema de Gestion de Activos</strong></h1>
         <div class="changeContent">
-        
+        <main-content></main-content>
         </div>
     </div>
   </body>
