feat: Add new feature to the dashboard
This commit adds a new feature to the dashboard. The following changes have been made:
- Modified App/webComponents/main.js to implement the new feature
- Modified Css/style.css to style the new feature
- Modified Index.html to include the new feature

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
   <body class="d-flex">
     <side-bar></side-bar>
-    <div>
+    <div class="cPrincipal">
         <h1 class="my-4 mx-5"><strong>Sistema de Gestion de Activos</strong></h1>
         <div class="changeContent">
         <main-content></main-content>
