fix: :art: Cambios en la visualizacion de los elementos en el dom

--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <side-bar></side-bar>
     <div class="cPrincipal">
         <h1 class="my-4 mx-5"><strong>Sistema de Gestion de Activos</strong></h1>
-        <div class="changeContent">
+        <div class="changeContent" id="main">
         <main-content></main-content>
         </div>
     </div>
