--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./Boostrap/css/bootstrap.css">
-    <script defer="" src="./Boostrap/js/bootstrap.bundle.js"></script>
+    <script defer src="./Boostrap/js/bootstrap.bundle.js"></script>
     <script type="module" src="App.js" defer></script>
     <link rel="stylesheet" href="Css/style.css" />
     <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
