--- a/test.html
+++ b/test.html
@@ -69,3 +69,21 @@
     });
   }
 </script>
+
+<div class="container mt-3">
+  <h2>Asignaciones Creadas</h2>
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Asignaciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Asignacion1</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
