style(Web Componnets): :sparkles: agregando stylos en un posible home page

--- a/test.html
+++ b/test.html
@@ -87,3 +87,11 @@
     </tbody>
   </table>
 </div>
+<main class="main-container">
+  <div class="content">
+    <h1 class="main-title"><strong>GO FOR IT!</strong></h1>
+  </div>
+  <div class="image-container">
+    <img src="source/img/OIG3.png" alt="Imagen" class="img-fluid">
+  </div>
+</main>
