--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,7 @@
         <h1 class="my-4 mx-5"><strong>Sistema de Gestion de Activos</strong></h1>
         <div class="changeContent" id="main">
         <!-- <main-content></main-content> -->
+        <home-element></home-element>
         </div>
     </div>
   </body>
