--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,13 @@
     <link rel="stylesheet" href="Css/style.css" />
     <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
   <body class="d-flex">
-    <side-bar></side-bar>
+    <side-bar class="sidebar"></side-bar>
     <div class="cPrincipal">
+        <button class="boton">
+            <div class="linea"></div>
+            <div class="linea"></div>
+            <div class="linea"></div>
+        </button>
         <h1 class="my-4 mx-5"><strong>Sistema de Gestion de Activos</strong></h1>
         <div class="changeContent" id="main">
         <!-- <main-content></main-content> -->
